# canitplaydoom-harness

./: .gitignore  HARNESS-SPEC.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  _vizdoom.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
canitplaydoom/: __init__.py  agent.py  ascii_encoder.py  bundle.py  cli.py  config.py  package.py  runner.py  scoring.py  verify.py
tests/: test_agent.py  test_ascii_encoder.py  test_scoring.py
